--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-streamlit==1.32.0
-plotly==5.18.0
-pandas==2.1.3
-openai==1.6.0
-python-dateutil==2.8.2
+streamlit>=1.28.0
+plotly>=5.17.0
+pandas>=2.2.0
+openai>=1.3.0
+python-dateutil>=2.8.2
